--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "marvel",
+  "homepage": "https://gustavoliveira94.github.io/marvel-redux/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "gh-pages": "^2.0.1",
     "popper.js": "^1.14.5",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
@@ -17,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
